--- a/tasks/subscribe.yml
+++ b/tasks/subscribe.yml
@@ -4,6 +4,6 @@
       path: "{{ system_cert_file }}"
     register: cert_details
   - name: Register the system with Redhat Subscription Manager
-    shell:
+    command:
       cmd: "subscription-manager register --force --serverurl {{ rhn_subscription_url }} --username {{ rhn_user }}  --password  {{ rhn_password }}"
     when: not cert_details.stat.exists
