--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -108,7 +108,7 @@
       loop_var: account_dir
   tags: register_with_sources
 - name: Include run locally
-  include_tasks: use_nohup.yml
+  include_tasks: use_local_script.yml
   when: skip_systemd is defined
 - name: Run with systemd
   include_tasks: use_systemd.yml
