--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -107,7 +107,7 @@
     loop_control:
       loop_var: account_dir
   tags: register_with_sources
-- name: Include run locally
+- name: Gennerate Shell Scripts
   include_tasks: use_local_script.yml
   when: skip_systemd is defined
 - name: Run with systemd
