--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -53,6 +53,7 @@
     yum:
       name: "{{ receptor_packages }}"
       state: installed
+      disable_gpg_check: yes
     become: yes
   when: install_receptor_from_rpm|bool
 - name: Extract account information from Ansible Tower and write configs
