Added support for Bearer Tokens

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@
 tower_url: "https://YourAnsibleServer"
 tower_user: "your_tower_username"
 tower_password: "your_tower_password"
+tower_token: ""
 tower_validate_certs: yes
 rhn_user: "your_redhat_username"
 rhn_password: "your_redhat_password"
