Log organization json

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -63,6 +63,8 @@
   - name: Get existing source info
     include_tasks: get_existing_sources.yml
     when: use_existing_receptor_node_id is defined and use_existing_receptor_node_id == 1
+  - debug:
+      msg: "Ansible orgs json {{ ansible_orgs_json }}"
   - name: Extract organization configuration per account and save to disk
     include_tasks: extract_orgs.yml
     loop: "{{ ansible_orgs_json.json | json_query('results[*].id') }}"
