Check if sources exist

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,7 +17,6 @@ https_proxy: ""
 receptor_packages:
   - python3-receptor-catalog
 c_rh_c_host: "cloud.redhat.com"
-skip_tower_org_id_list:
-  - 0
 source_display_name: "{{ tower_url|urlsplit('hostname') }}"
 use_existing_receptor_node_id: 1
+use_existing_source: 0
