--- a/tasks/register_with_sources.yml
+++ b/tasks/register_with_sources.yml
@@ -6,13 +6,6 @@
     - name: Extract node ID from configuration
       set_fact:
         receptor_node_id: "{{ lookup('ini', 'node_id section=default file='+receptor_config_dir+'/'+account_dir+'/receptor.conf') }}"
-    - name: See if source already exists
-      uri:
-        url: "https://{{ c_rh_c_host }}/api/sources/v2.0/sources?source_ref={{ tower_uuid }}"
-        client_cert: "{{ system_cert_file }}"
-        client_key: "{{ system_key_file }}"
-        return_content: yes
-      register: existing_source_response
     - name: " Create Source in {{ c_rh_c_host }}"
       uri:
         url: "https://{{ c_rh_c_host }}/api/sources/v2.0/sources"
@@ -28,15 +21,11 @@
         status_code:
           - 201
       register: source_create_response
-      when: existing_source_response.json.meta.count == 0
+      when: source_id is not defined
     - name: Set source ID fact (just created)
       set_fact:
         source_id: "{{ source_create_response.json.id }}"
-      when: existing_source_response.json.meta.count == 0
-    - name: Set source ID fact (pre-existing)
-      set_fact:
-        source_id: "{{ existing_source_response.json | json_query('data[0].id') }}"
-      when: existing_source_response.json.meta.count != 0
+      when: source_id is not defined
     - name: See if endpoint already exists
       uri:
         url: "https://{{ c_rh_c_host }}/api/sources/v2.0/endpoints?source_id={{ source_id }}"
@@ -44,7 +33,7 @@
         client_key: "{{ system_key_file }}"
         return_content: yes
       register: existing_endpoint_response
-    - name: Add endpoint to Source
+    - name: Add endpoint to Source if it does not exist
       uri:
         url: "https://{{ c_rh_c_host }}/api/sources/v2.0/endpoints"
         client_cert: "{{ system_cert_file }}"
@@ -65,7 +54,7 @@
         client_key: "{{ system_key_file }}"
         return_content: yes
       register: existing_application_response
-    - name: Add application to Source
+    - name: Add application to Source if it does not exist
       uri:
         url: "https://{{ c_rh_c_host }}/api/sources/v2.0/applications"
         client_cert: "{{ system_cert_file }}"
