--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,4 +17,4 @@ receptor_packages:
   - python3-receptor-catalog
 c_rh_c_host: "cloud.redhat.com"
 source_display_name: "{{ tower_url|urlsplit('hostname') }}"
-use_existing_source: 0
+use_existing_source: no
