--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -117,9 +117,9 @@
 - name: Run with systemd
   include_tasks: use_systemd.yml
   when: use_systemd is defined
-- name: Pause for the processes to startup
-  pause:
-    seconds: 30
+- name: Wait for 30 seconds for the processes to startup
+  wait_for:
+    timeout: 30
 - name: "Trigger {{ c_rh_c_host }} to detect this receptor"
   uri:
     url: "https://{{ c_rh_c_host }}/api/sources/v2.0/sources/{{ source_id }}/check_availability"
