--- a/tasks/qa_tasks.yml
+++ b/tasks/qa_tasks.yml
@@ -1,9 +1,10 @@
 ---
-- name: "Downloading {{ qa_repo|basename }}"
+- name: "Downloading QA Repository"
   get_url:
     url: "{{ qa_repo }}"
     dest: "/etc/yum.repos.d/{{ qa_repo|basename }}"
     mode: '0440'
+  when: qa_repo is defined
 - name: "Update the CA Certs"
   block:
     - name: "Downloading CA Cert {{ qa_ca_cert|basename }}"
