--- a/tasks/register_with_sources.yml
+++ b/tasks/register_with_sources.yml
@@ -2,6 +2,7 @@
 - name: Set proxy environment variables
   environment:
     http_proxy: "{{ http_proxy }}"
+    https_proxy: "{{ http_proxy }}"
   block:
     - name: Extract node ID from configuration
       set_fact:
