Check if the package is available for the RHEL version

--- a/tasks/sub_mgr.yml
+++ b/tasks/sub_mgr.yml
@@ -1,4 +1,8 @@
 ---
+- name: "Check if we have package for RHEL{{ ansible_distribution_major_version }}"
+  fail:
+     msg: "Automation Service Catalog package not defined for RHEL{{ ansible_distribution_major_version }}"
+  when: ansible_distribution_major_version not in asc_package_name.keys()
 - name: "Get Pool Ids for SKU {{ rhsm_asc_sku }}"
   command: "subscription-manager list --available --matches={{ rhsm_asc_sku }} --pool-only"
   register: sub_cmd
